--- a/index.html
+++ b/index.html
@@ -4,22 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON 数据展示</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> <!-- 引入 Markdown 解析库 -->
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        .container { max-width: 800px; margin: 20px auto; text-align: left; }
-        .entry { border: 1px solid #ddd; padding: 10px; margin: 10px 0; border-radius: 5px; }
-        .entry h3 { margin: 5px 0; }
-        .entry p { margin: 5px 0; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            text-align: left;
+        }
+        .entry {
+            background: #ffffff;
+            border-radius: 8px;
+            padding: 15px;
+            margin: 15px 0;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .entry h3 {
+            font-size: 18px;
+            color: #333;
+            margin-bottom: 5px;
+            word-break: break-word;
+        }
+        .entry p {
+            font-size: 14px;
+            margin: 5px 0;
+            color: #555;
+        }
+        .messages {
+            background: #f1f1f1;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .messages li {
+            padding: 8px;
+            margin: 5px 0;
+            list-style: none;
+            border-radius: 5px;
+        }
+        .messages .system {
+            background: #e3f2fd;
+            font-weight: bold;
+        }
+        .messages .user {
+            background: #d1f0d1;
+        }
+        .messages .assistant {
+            background: #f9e79f;
+        }
     </style>
 </head>
 <body>
-    <h1>JSON 数据展示</h1>
+    <h1>📌 JSON 数据展示</h1>
     <div class="container" id="dataContainer"></div>
 
     <script>
         async function fetchData() {
             try {
-                // 直接从 sample.json 读取数据
+                // 读取 JSON 数据
                 const response = await fetch('sample.json');
                 const jsonData = await response.json();
 
@@ -36,19 +84,25 @@
                     div.className = "entry";
                     div.innerHTML = `
                         <h3>ID: ${entry.id}</h3>
-                        <p><strong>Mastery Level:</strong> ${entry.mastery_level}</p>
-                        <p><strong>Question Type:</strong> ${entry.question_type}</p>
-                        <p><strong>Knowledge:</strong> ${entry.knowledge}</p>
-                        <p><strong>Messages:</strong></p>
-                        <ul>
-                            ${entry.messages.map(msg => `<li><strong>${msg.role}:</strong> ${msg.content}</li>`).join('')}
-                        </ul>
+                        <p><strong>📌 Mastery Level:</strong> ${entry.mastery_level}</p>
+                        <p><strong>📖 Question Type:</strong> ${entry.question_type}</p>
+                        <p><strong>📚 Knowledge:</strong> ${entry.knowledge}</p>
+                        <div class="messages">
+                            <strong>💬 Messages:</strong>
+                            <ul>
+                                ${entry.messages.map(msg => 
+                                    `<li class="${msg.role}">
+                                        <strong>${msg.role}:</strong> 
+                                        <div class="markdown">${marked.parse(msg.content)}</div> <!-- 解析 Markdown -->
+                                    </li>`).join('')}
+                            </ul>
+                        </div>
                     `;
                     container.appendChild(div);
                 });
             } catch (error) {
                 console.error("加载 JSON 失败: ", error);
-                document.getElementById("dataContainer").innerHTML = "<p style='color: red;'>无法加载 JSON 数据，请检查 sample.json 是否存在！</p>";
+                document.getElementById("dataContainer").innerHTML = "<p style='color: red;'>❌ 无法加载 JSON 数据，请检查 sample.json 是否存在！</p>";
             }
         }
 
