--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             margin-bottom: 5px;
             font-style: italic;
             color: #555;
+            font-size: 14px; /* CoT 内容字体更小 */
         }
         .answer {
             margin-top: 5px;
