--- a/index.html
+++ b/index.html
@@ -19,43 +19,43 @@
             text-align: left;
         }
         .search-box {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             text-align: center;
         }
         .search-box input {
-            padding: 10px;
-            width: 300px;
-            font-size: 16px;
+            padding: 8px;
+            width: 280px;
+            font-size: 14px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         .entry {
             background: #ffffff;
             border-radius: 8px;
-            padding: 15px;
-            margin: 15px 0;
+            padding: 12px;
+            margin: 10px 0;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
         .entry h3 {
-            font-size: 18px;
+            font-size: 16px;
             color: #333;
             margin-bottom: 5px;
             word-break: break-word;
         }
         .entry p {
             font-size: 14px;
-            margin: 5px 0;
+            margin: 3px 0;
             color: #555;
         }
         .messages {
             background: #f1f1f1;
-            padding: 10px;
+            padding: 8px;
             border-radius: 5px;
-            margin-top: 10px;
+            margin-top: 8px;
         }
         .messages li {
-            padding: 8px;
-            margin: 5px 0;
+            padding: 6px;
+            margin: 3px 0;
             list-style: none;
             border-radius: 5px;
         }
@@ -67,29 +67,29 @@
         }
         .think {
             background: #e0e0e0;
-            padding: 10px;
+            padding: 8px;
             border-radius: 5px;
             margin-bottom: 5px;
-            font-style: italic;
-            color: #555;
-            font-size: 14px; /* CoT 内容字体更小 */
+            color: #333;
+            font-size: 14px;
         }
         .answer {
             margin-top: 5px;
+            font-size: 14px;
         }
         .pagination {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 10px;
         }
         .pagination button {
-            padding: 10px;
-            margin: 5px;
+            padding: 8px;
+            margin: 3px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             background-color: #007bff;
             color: white;
-            font-size: 16px;
+            font-size: 14px;
         }
         .pagination button:disabled {
             background-color: #cccccc;
@@ -179,8 +179,8 @@
             }
 
             return `
-                ${thinkPart ? `<div class="think">${marked.parse(thinkPart)}</div>` : ''}
-                <div class="answer">${marked.parse(answerPart)}</div>
+                ${thinkPart ? `<div class="think">${marked.parse(thinkPart).trim()}</div>` : ''}
+                <div class="answer">${marked.parse(answerPart).trim()}</div>
             `;
         }
 
